<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.examples.Services.MusicClient.MainActivity" >

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/stop"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:text="@string/stop" />

    <Button
        android:id="@+id/play1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/play1"
        android:text="@string/play_song_1" />

    <Button
        android:id="@+id/play2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/play1"
        android:layout_below="@+id/play1"
        android:text="@string/play_song_2" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stop"
        android:layout_alignStart="@+id/pause"
        android:layout_marginBottom="23dp"
        android:text="@string/pause" />

    <Button
        android:id="@+id/play3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/play1"
        android:layout_below="@+id/play2"
        android:text="@string/play_song_3" />

    <Button
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/play1"
        android:layout_marginEnd="33dp"
        android:text="@string/list" />

</RelativeLayout>
